Fix bug where images overspill their boundaries in Firefox. Revert part of commit 16768ee and make images into centered block elements.

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -230,7 +230,7 @@ p {
   container's width.
 */
 img, video, canvas {
-  max-width: 100%
+  max-width: 100%;
 }
 
 textarea {
